Fix url for see more

--- a/_i18n/en/_posts/project/2020-11-17-ray2020.md
+++ b/_i18n/en/_posts/project/2020-11-17-ray2020.md
@@ -121,7 +121,7 @@ We hope that students can produce wireframes in two different directions, one is
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/taipei_service/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/taipei_service/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
@@ -169,7 +169,7 @@ We hope that students can produce wireframes in two different directions, one is
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/klcg/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/klcg/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
@@ -217,7 +217,7 @@ We hope that students can produce wireframes in two different directions, one is
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/yda/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/yda/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
@@ -265,7 +265,7 @@ We hope that students can produce wireframes in two different directions, one is
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/edesk_bli/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/edesk_bli/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
@@ -313,7 +313,7 @@ We hope that students can produce wireframes in two different directions, one is
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/taichung_society/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/taichung_society/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
@@ -367,7 +367,7 @@ We hope that students can produce wireframes in two different directions, one is
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/tpech/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/tpech/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
@@ -415,7 +415,7 @@ We hope that students can produce wireframes in two different directions, one is
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/taiwan_jobs/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/taiwan_jobs/" class="button">看更多</a></div>
         </div>
       </div>
     </div>
