--- a/_posts/project/2020-11-17-ray2020.md
+++ b/_posts/project/2020-11-17-ray2020.md
@@ -110,7 +110,7 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/taipei_service/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/taipei_service/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
@@ -158,7 +158,7 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/klcg/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/klcg/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
@@ -206,7 +206,7 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/yda/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/yda/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
@@ -254,7 +254,7 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/edesk_bli/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/edesk_bli/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
@@ -302,7 +302,7 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/taichung_society/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/taichung_society/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
@@ -356,7 +356,7 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/tpech/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/tpech/" class="button">看更多</a></div>
         </div>
       </div>
       <div class="project-card">
@@ -404,7 +404,7 @@ Ray 4.0 召集全國具有設計及資訊專長的青年學子一同加入我們
               </div>
             </div>
           </div>
-          <div class="card-action"><a href="/taiwan_jobs/" class="button">看更多</a></div>
+          <div class="card-action"><a href="https://ray.pdis.nat.gov.tw/taiwan_jobs/" class="button">看更多</a></div>
         </div>
       </div>
     </div>
