--- a/_i18n/en/_posts/2021-04-06-透明參與的關鍵網絡-開放政府聯絡人.md
+++ b/_i18n/en/_posts/2021-04-06-透明參與的關鍵網絡-開放政府聯絡人.md
@@ -2,11 +2,11 @@
   layout: "post"
   title: "The key network for transparent participation-open government contacts"
   excerpt: "Emotional communication before collaboration on substantive issues becomes even more indispensable after it becomes the new normal on the long-distance line."
-  image: "https://lh5.googleusercontent.com/vLPiPPDGacXFnKU7-34Ex88FCWl4VYDUyMM8koLJ01Tbc3vNPTVMyswR6sR-tR9LkOhFF_ItOk5xDyKn7jdu=w10000-h10000"
-  author: "唐鳳、彭美琪"
+  image: "/assets/imgs/c79c66cc8df7d2dcc04b6ecf1de815529c675445.jpeg"
+  author: "Audrey Tang, Mickey Peng"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
 
