--- a/_i18n/zh-TW/_posts/2021-04-06-透明參與的關鍵網絡-開放政府聯絡人.md
+++ b/_i18n/zh-TW/_posts/2021-04-06-透明參與的關鍵網絡-開放政府聯絡人.md
@@ -2,7 +2,7 @@
 layout: post
 title: 透明參與的關鍵網絡 ─ 開放政府聯絡人
 excerpt: 實質議題協力前的情感交流，在遠距線上成為新常態後，更加不可或缺。
-image: "https://lh5.googleusercontent.com/vLPiPPDGacXFnKU7-34Ex88FCWl4VYDUyMM8koLJ01Tbc3vNPTVMyswR6sR-tR9LkOhFF_ItOk5xDyKn7jdu=w10000-h10000"
+image: /assets/imgs/c79c66cc8df7d2dcc04b6ecf1de815529c675445.jpeg
 author: 唐鳳、彭美琪
 category: blog
 tags: 
