--- a/_i18n/zh-TW/_posts/2021-04-23-社創合作-邁向淨零.md
+++ b/_i18n/zh-TW/_posts/2021-04-23-社創合作-邁向淨零.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 社創合作，邁向淨零
-excerpt: 實質議題協力前的情感交流，在遠距線上成為新常態後，更加不可或缺。
+excerpt: 「陽光伏特家」媒合企業與民眾，一同為非營利組織建造太陽能發電廠，可以提供社區組織 20 年的穩定收入來源。
 image: https://cdn-cw-english.cwg.tw/ckeditor/202104/ckeditor-608298261dcba.jpeg
 author: 唐鳳、彭筱婷
 category: blog
