--- a/_i18n/en/_posts/2021-04-23-社創合作-邁向淨零.md
+++ b/_i18n/en/_posts/2021-04-23-社創合作-邁向淨零.md
@@ -1,29 +1,28 @@
 ---
   layout: "post"
-  title: "Social innovation cooperation, towards net zero"
+  title: "Through the green energy charity model, Sunnyfounder matches companies with citizens to build solar power plants for community organizations."
   excerpt: "Emotional communication before collaboration on substantive issues becomes even more indispensable after it becomes the new normal on the long-distance line."
   image: "https://cdn-cw-english.cwg.tw/ckeditor/202104/ckeditor-608298261dcba.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+The Asia Pacific Social Innovation Summit was held April 10 to 11. During the successful event, the third annual Asia Pacific Social Innovation Partnership Award (APSIPA) honored 10 outstanding projects.
 
-This year’s Asia-Pacific Social Innovation Summit was successfully concluded on April 10th and 11th. Among them, the third "Asia-Pacific Social Innovation Cooperation Award" also took this opportunity to present awards to ten winning social innovation cases . 
+The purpose of APSIPA, launched in 2019, is to encourage social innovators in the Asia-Pacific to collaborate across sectors. The jury reviews applications and selects highlighted projects on the basis of impact, diversity, innovation and sustainability. In addition to making new solutions to social-environmental issues more widely known worldwide, APSIPA aims to encourage the replication of projects across the region so as to scale up their impact.
 
-The Asia-Pacific Social Innovation Cooperation Award launched in 2019 aims to encourage social innovation organizations in the Asia-Pacific region to work together and connect multiple stakeholders. The jury is based on four aspects: influence, diversity, innovation, and sustainability. Selecting bright cases will not only make new solutions to social or environmental problems more widely known in the world, but also through awards can encourage cases to be replicated or spread to other countries in the Asia-Pacific region, so that social influence can be scaled up. 
+In the three years since its inception, APSIPA has highlighted nearly 250 collaboration models to promote biosphere sustainability, inclusive business and social prosperity. As COVID-19 continues its march around the globe, New Reality was selected as the theme of the jury's special award to explore how social innovation and cooperation can find novel ways of sustaining communities.
 
-After three years of handling, the Asia-Pacific Social Innovation Cooperation Award has accumulated nearly 250 cooperation models to promote environmental sustainability, economic inclusiveness, and social prosperity in all parts of the Asia-Pacific region. As the COVID-19 pandemic continues to spread, this year’s awards will use "New Reality" as the theme of the jury's special award to explore how social innovation cooperation can find innovative ways to sustain business. 
+APSIPA received 77 project applications across 13 jurisdictions, including Taiwan, Cambodia, Hong Kong, India, Laos, Singapore and South Korea. The jury consists of senior partners long devoted to social innovation from Taiwan, Indonesia, Thailand, and the U.S., among others. As the convener of the jury, I learned about some impressive regional partnerships.
 
-This Asia-Pacific Social Innovation Cooperation Award received a total of 77 application cases across 13 countries including Taiwan, Hong Kong, South Korea, Singapore, Cambodia, Laos, and India. The jury came from Taiwan, Thailand, and Indonesia. , The United States and other places have long-term investment in social innovation senior partners. As the convener of the jury, in the process, I got to know many amazing partnerships in many regions. 
+In order to achieve net-zero emissions, some partners take advantage of technology to enable public participation in the simplest way. For example, Taiwan’s social innovation organization [Sunnyfounder](https://www.sunnyfounder.com/media_coverages/115) created the country's first green energy crowdfunding platform matching funds and suitable rooftop resources. With as little as NT$15,000 (US$534), one can subscribe to a solar panel. And through the green energy charity model, Sunnyfounder matches companies with citizens to build solar power plants for community organizations. Together with the feed-in tariff scheme Taiwan adopted to encourage the development of renewable energy, the initiative can provide charities with a stable source of income for 20 years.
 
-In order to achieve the goal of net zero emissions, some partners use the power of science and technology to allow the public to participate in the change in the simplest way. For example, Taiwan’s social innovation organization "Sunshine Volt House" has created Taiwan’s first green energy crowdfunding platform. The platform matches public funds and suitable rooftop resources. People can subscribe for a solar panel with only NT$15,000. . And through the "green energy public welfare model", Sunshine Volta also can match companies and the public to build solar power plants for non-profit organizations. Together with the government's "Taiwan Power Purchase and Sale System" that encourages the development of renewable energy, it can provide community organizations. A stable source of income for 20 years. 
+Following the launch of Sunnyfounder, seven companies and 20,000-plus individuals banded together to raise funds to build more than 200 solar power plants. Twelve community organizations serving economically disadvantaged groups such as seniors and the physcially and mentally challenged have benefited. Due to its innovative ways of fostering particpation in renewable energy, Sunnyfounder won APSIPA's Social Prosperity Award.
 
-Since the launch of Sunvolt Home, more than 20,000 people and 7 companies have joined the ranks of fund-raising to build more than 200 solar power plants. Among them, there are 12 communities that serve disadvantaged groups such as the elderly and the physically and mentally disabled. The organization benefits. Because of this innovative method of motivating the public to participate in renewable energy, Sungrow has won the "Social Prosperity Award" of this year's Asia-Pacific Social Innovation Cooperation Award. 
+Also in Asia, through the nonfired brick system in Nepal promoted by South Korean firm [InnoCSR Co. Ltd.](https://www.innocsr.com/), we see another brilliant example of multinational development of innovative technologies to promote transformation of traditional production. In Nepal, due to the booming number of reconstruction projects in the aftermath of the 2015 earthquakes, as well as rapid economic growth in recent years, local demand for bricks is extremely high. At least 5 billion bricks are needed each year, leading to severe pollution caused by firing.
 
-Also in Asia, through the "Nepal's Non-fired Bricks" promoted by the Korean company InnoCSR Co., Ltd, we have seen another wonderful case of transnational development of innovative technologies that promoted changes in traditional production models. In Nepal, due to the earthquake reconstruction related projects in 2015 and the recent high economic growth, the local demand for bricks is very large, at least 5 billion bricks are needed a year, and the burning of bricks causes serious air pollution. 
+InnoCSR's nonfired brick system mitigates at least 3,000 tons of carbon dioxide from each production site. It also greatly decreases labor costs and improves manufacturing efficiency and quality. In addition, InnoCSR collaborates with more than 100 brick-firing related local nonprofits to jointly promote new manufacturing technologies and establish training schools. This brings about better working environments and higher incomes for laborers. Many manufacturers have embraced this technology in an effort to help protect Nepal's environment. Recognized by APSIPA's Environmental Sustainability award, the technology will be shared with other countries in the future.
 
-InnoCSR through the research and development of brick manufacturing technology that does not need to be fired, not only effectively reduces the average 3,000 tons of CO2 and other waste gas emissions from each brick yard, but also greatly reduces labor costs and improves manufacturing efficiency and quality. In addition, InnoCSR also harmonizes More than 100 local non-profit organizations related to brick burning work together to promote new production technologies and develop training schools to promote a better working environment and economic income for workers. At present, many manufacturers have been attracted to switch to this technology to achieve the effect of protecting Nepal's environment. Not only has it been recognized by this environmental sustainability award, it will also be promoted to other countries in the future. 
-
-InnoCSR and Sunshine Volt’s practices, let us see that in today's climate change is becoming more severe, social innovation is not only the investment of certain people or organizations, but the entire society covers the general public, enterprises, and non-profit organizations. The government, the government, etc. are all involved in the paradigm transfer, and at the same time, the change takes place, and everyone needs to be gathered. Each of us can become a part of the solution. 
+The examples of InnoCSR and Sunnyfounder show that although the climate crisis is worsening by the day, social innovations can lead to paradigm shifts across all segments of society, fostering people-public-private partnerships. It takes all hands on deck to bring about change, and everyone can be part of the solution.
