Fix syntax error

--- a/_i18n/en/_posts/2021-05-13-當「蠶豆症患者」遇上「樟腦丸業者」.md
+++ b/_i18n/en/_posts/2021-05-13-當「蠶豆症患者」遇上「樟腦丸業者」.md
@@ -1,14 +1,13 @@
 ---
----
-
----
 layout: post
 title: When a "fava bean disease patient" meets a "camphor pill manufacturer"
 excerpt: After the collaboration meeting, the Environmental Protection Agency discussed with the industry and the county and city governments to determine the public agency Disable naphthalene pills in public toilets. 
 image: /assets/imgs/19df87635a2d87133ee29362a0c6295ba05ef77c.jpeg
 author: Tang Feng, Xu Enen
 category: blog
-tags: [Open Government][Collaboration Meeting]
+tags: 
+  - Open Government
+  - Collaboration Meeting
 ---
 
 
