update image url format

--- a/_i18n/en/_posts/2021-05-27-用台灣茶風味，與世界接軌.md
+++ b/_i18n/en/_posts/2021-05-27-用台灣茶風味，與世界接軌.md
@@ -24,7 +24,7 @@ On the day of the collaboration meeting, we specially designed the tea-drinking 
 
 In order to prevent participants from being limited to imagination by designing a "wheel"-like flavor system diagram, we changed the core issue from improving the flavor wheel to a more unrestricted "systematic flavor description" to allow participants You can "break the tool framework" with peace of mind and proceed completely from your own needs. 
 
-image: https://talk.pdis.nat.gov.tw/uploads/default/original/2X/b/b8a9a75ee4bd2bbfaf52e6838331c751217a03f7.jpeg
+![Collaborative meeting with Taiwanese Tea](https://talk.pdis.nat.gov.tw/uploads/default/original/2X/b/b8a9a75ee4bd2bbfaf52e6838331c751217a03f7.jpeg)
 
 The composition of the participants, except for the tea cooperating with the tea field In addition to merchants, tea farmers, and tea masters, baristas and wine appraisers were also invited, because these two fields have already established a systematic flavor vocabulary. In addition, people who sign up online, as well as game design and interactive design experts we invited separately. 
 
