Fix filename mistake and optimize image

--- a/_i18n/en/_posts/2021-06-08-公民參與的「超前部署」：開放政府如何討論ETC.md
+++ b/_i18n/en/_posts/2021-06-08-公民參與的「超前部署」：開放政府如何討論ETC.md
@@ -2,7 +2,7 @@
   layout: "post"
   title: "\"Advance Deployment\" of Citizen Participation: How the Open Government Discuss ETC"
   excerpt: "Everyone wants Taiwan to be better, and I believe that the opportunity for dialogue has always been there."
-  image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/3b02d2d647d93427ae2d4a293182fb9f6fe95e3b.jpeg"
+  image: "/assets/imgs/3b02d2d647d93427ae2d4a293182fb9f6fe95e3b.jpeg"
   author: "唐鳳、詹壹雯"
   category: "blog"
   tags: 
@@ -22,7 +22,7 @@ Most of the topics discussed in the collaboration meeting came from joint propos
 
 Of course, public policy is not about remedying headaches and feet; exploring the key to the problem first can find the most appropriate solution. The collaboration meeting has reached the 90th case. The Chief Accountability Department has been able to actively and skillfully contact the proponents to learn more about "Why the proposal?", "What do you want to change?", "What is the deeper concern?"
 
- https://talk.pdis.nat.gov.tw/uploads/default/original/2X/1/130c42e53950ab89a46145bf546041e66708a0ea.jpeg 
+ /assets/imgs/130c42e53950ab89a46145bf546041e66708a0ea.jpeg 
 
 After contacting and clarifying, the sponsor expanded from the original three main demands to eight This item includes the common doubts of other netizens: In addition to explaining the legal and substantive significance of "nationalization", netizens are also concerned about issues such as multiple payment methods, information security, and disclosure of contract content. The collective sentiment is precisely Distrust and opposition. 
  
@@ -32,7 +32,7 @@ Before the meeting, the organizer interviewed all stakeholders to collect more d
 
 This time the topic is highly watched. We use live broadcast to allow people who care about it to participate online. Through the "anonymous message" function of the necessary real-time interactive tool sli.do, online and offline participants do not have to worry about offending each other. If you are speechless, you can speak the truth without shy. Under the transparent principle of open government, care for human nature is also implemented. 
 
-https://talk.pdis.nat.gov.tw/uploads/default/original/2X/6/6f2ab6e36a11dfa3828f4b5de9d42164ef678463.jpeg
+/assets/imgs/6f2ab6e36a11dfa3828f4b5de9d42164ef678463.jpeg
  
 Someone may ask: the BOT case has four years to expire, why is it Is this time to discuss ETC? In fact, when clarifying the eight demands one by one, everyone's core concern is "how to make the future national highway electronic toll service better?". Brainstorming for the new generation of ETC service content after 2025 can be said to be an "advanced deployment" of citizen participation. It also implements the spirit of the open government that should count the needs of users in the early stages of the policy. 
  
