--- a/_i18n/en/_posts/2021-07-18- 1922 疫苗預約系統.md
+++ b/_i18n/en/_posts/2021-07-18- 1922 疫苗預約系統.md
@@ -2,7 +2,7 @@
   layout: "post"
   title: "1922 Vaccine Reservation System"
   excerpt: "There are four steps in the 1922 VAS: Registration, Notification, Appointment, and Vaccination."
-  image: "https://cdn-cw-english.cwg.tw/ckeditor/202107/ckeditor-60f4eac951900.png"
+  image: "/assets/imgs/2f459131f60844dab4133346dea8d7336e6e55aa.jpg"
   author: "Audrey Tang、Sheau-Tyng Peng"
   category: "blog"
   tags: 
