--- a/_posts/2021-07-18- 1922 疫苗預約系統.md
+++ b/_posts/2021-07-18- 1922 疫苗預約系統.md
@@ -1,28 +1,28 @@
 ---
 layout: post
 title: 1922 疫苗預約系統
-excerpt: 1922疫苗預約平台分為四個步驟：意願登記、簡訊通知、預約接種和接種疫苗。
-image: https://cdn-cw-english.cwg.tw/ckeditor/202107/ckeditor-60f4eac951900.png
+excerpt: 1922 疫苗預約平台分為四個步驟：意願登記、簡訊通知、預約接種和接種疫苗。
+image: /assets/imgs/2f459131f60844dab4133346dea8d7336e6e55aa.jpg
 author: 唐鳳、彭筱婷
 category: blog
 tags: 
   - 社會創新、開放政府
 ---
 
-自5月19日在全國疫情警戒提升到第三級後，兩個月來，所有人一同遵守相關防疫規定，從6月25日開始，臺灣單日新增確診病例連日降到兩位數。日前，指揮中心除了延長三級警戒至7月26日，同時也公佈了多項適度鬆綁措施，在避免防疫疲乏的同時，也為全面解除警戒提前準備。
+自 5 月 19 日在全國疫情警戒提升到第三級後，兩個月來，所有人一同遵守相關防疫規定，從 6 月 25 日開始，臺灣單日新增確診病例連日降到兩位數。日前，指揮中心除了延長三級警戒至 7 月 26 日，同時也公佈了多項適度鬆綁措施，在避免防疫疲乏的同時，也為全面解除警戒提前準備。
 
-重回正常生活的至要關鍵，則是疫苗施打率的普及度，根據專家評估，至少六至七成民眾均接受完整COVID-19疫苗注射，將出現群體免疫效果。也因此，行政院在考量已施打疫苗情況、即將到貨的疫苗數量，並與各縣市政府開會後，開發出「1922 COVID-19公費疫苗預約平台」。
+重回正常生活的至要關鍵，則是疫苗施打率的普及度，根據專家評估，至少六至七成民眾均接受完整 COVID-19 疫苗注射，將出現群體免疫效果。也因此，行政院在考量已施打疫苗情況、即將到貨的疫苗數量，並與各縣市政府開會後，開發出「1922 COVID-19 公費疫苗預約平台」。
 
-1922疫苗預約平台分為四個步驟：意願登記、簡訊通知、預約接種和接種疫苗。
+1922 疫苗預約平台分為四個步驟：意願登記、簡訊通知、預約接種和接種疫苗。
 
-所有18歲以上，有意願施打疫苗的民眾前往網站1922.gov.tw，輸入身分證／居留證號碼、健保卡號、手機號碼、希望接種的行政區及疫苗種類。如果民眾登記的年齡及資格符合，且希望接種疫苗數量足夠，1922會以簡訊通知。
+所有 18 歲以上，有意願施打疫苗的民眾前往網站 1922.gov.tw，輸入身分證／居留證號碼、健保卡號、手機號碼、希望接種的行政區及疫苗種類。如果民眾登記的年齡及資格符合，且希望接種疫苗數量足夠，1922 會以簡訊通知。
 
-採取「先登記、再預約」的原因在於，目前臺灣已有AZ和莫德納兩種不同的疫苗，而後續疫苗到貨時間不一，先開放意願登記能確切掌握民眾偏好，在疫苗到貨量足夠涵蓋登記人數時，再通知已登記的人進行預約，如此一來，便可以確保每一劑疫苗都能有效及時的施打。
+採取「先登記、再預約」的原因在於，目前臺灣已有 AZ 和莫德納兩種不同的疫苗，而後續疫苗到貨時間不一，先開放意願登記能確切掌握民眾偏好，在疫苗到貨量足夠涵蓋登記人數時，再通知已登記的人進行預約，如此一來，便可以確保每一劑疫苗都能有效及時的施打。
 
 此外，意願登記順序並不影響接種的先後順序，只要在系統開放期間完成意願登記，就一定會獲得預約通知的資格。這個設定是避免因不諳網路使用而影響民眾權益，如果以登記時間做為依據，將可能讓較懂得使用數位工具的人佔盡先機。所以，未來政府通知預約時，是依照「長幼有序」原則，以出生年來安排施打順序。
 
-除了國人以外，我們在初始設計COVID-19公費疫苗預約平台時，就納入居留證作為身份識別，目前英文版網站也已上線，持有居留證和健保卡的外籍人士、合法移工及新住民，只要憑居留證號碼及健保卡號上平台登記，都可接種疫苗。即使是沒有健保卡的外籍朋友，透過台北通等介接疫苗預約平台的相關服務，也能登記。
+除了國人以外，我們在初始設計 COVID-19 公費疫苗預約平台時，就納入居留證作為身份識別，目前英文版網站也已上線，持有居留證和健保卡的外籍人士、合法移工及新住民，只要憑居留證號碼及健保卡號上平台登記，都可接種疫苗。即使是沒有健保卡的外籍朋友，透過台北通等介接疫苗預約平台的相關服務，也能登記。
 
-在臺灣人齊心抗疫的這段時間，除了政府原本訂購的疫苗陸續到貨，我們也獲得許多朋友毫無保留的協助，包括美國政府捐贈250萬劑Moderna疫苗、日本政府捐贈3批合計337萬劑AZ疫苗、立陶宛政府捐贈2萬劑AZ疫苗，以及斯洛伐克政府捐贈1萬劑疫苗，讓臺灣人回復正常生活打通最後一哩路。
+在臺灣人齊心抗疫的這段時間，除了政府原本訂購的疫苗陸續到貨，我們也獲得許多朋友毫無保留的協助，包括美國政府捐贈 250 萬劑 Moderna 疫苗、日本政府捐贈 3 批合計 337 萬劑 AZ 疫苗、立陶宛政府捐贈 2 萬劑 AZ 疫苗，以及斯洛伐克政府捐贈 1 萬劑疫苗，讓臺灣人回復正常生活打通最後一哩路。
 
 兼顧數位平權、民眾意願和外籍人權的疫苗預約平台，正是臺灣確保這些心意受到妥善運用的具體實現。
