* staging but not yet

--- a/_i18n/zh-TW/_posts/2021-07-18- 1922 疫苗預約系統.md
+++ b/_i18n/zh-TW/_posts/2021-07-18- 1922 疫苗預約系統.md
@@ -21,7 +21,7 @@ tags:
 
 此外，意願登記順序並不影響接種的先後順序，只要在系統開放期間完成意願登記，就一定會獲得預約通知的資格。這個設定是避免因不諳網路使用而影響民眾權益，如果以登記時間做為依據，將可能讓較懂得使用數位工具的人佔盡先機。所以，未來政府通知預約時，是依照「長幼有序」原則，以出生年來安排施打順序。
 
-除了國人以外，我們在初始設計 COVID-19 公費疫苗預約平台時，就納入居留證作為身份識別，目前英文版網站也已上線，持有居留證和健保卡的外籍人士、合法移工及新住民，只要憑居留證號碼及健保卡號上平台登記，都可接種疫苗。即使是沒有健保卡的外籍朋友，透過台北通等介接疫苗預約平台的相關服務，也能登記。
+除了國人以外，我們在初始設計 COVID-19 公費疫苗預約平台時，就納入居留證作為身份識別。持有居留證和健保卡的外籍人士、合法移工及新住民，只要憑居留證號碼及健保卡號上平台登記，都可接種疫苗。即使是沒有健保卡的外籍朋友，透過台北通等介接疫苗預約平台的相關服務，也能陸續進行登記。
 
 在臺灣人齊心抗疫的這段時間，除了政府原本訂購的疫苗陸續到貨，我們也獲得許多朋友毫無保留的協助，包括美國政府捐贈 250 萬劑 Moderna 疫苗、日本政府捐贈 3 批合計 337 萬劑 AZ 疫苗、立陶宛政府捐贈 2 萬劑 AZ 疫苗，以及斯洛伐克政府捐贈 1 萬劑疫苗，讓臺灣人回復正常生活打通最後一哩路。
 
