--- a/_posts/2021-07-22-疫苗登記預約平台怎麼來的？.md
+++ b/_posts/2021-07-22-疫苗登記預約平台怎麼來的？.md
@@ -2,7 +2,7 @@
 layout: post
 title: 疫苗登記預約平台怎麼來的？
 excerpt: 資訊技術的提升，奠基在看見需求和充分溝通上。「以人為本」的服務設計，可強化公共服務的效能，提高社會韌性。
-image: /assets/imgs/250b4cc3ad817d18a9648dd308cb72ac956cb4f7.png
+image: /assets/imgs/9b14792c12664519ba8015c2dc78bdfb35b8dde1.jpg
 author: 唐鳳、詹壹雯
 category: blog
 tags: 
