--- a/_i18n/en/_posts/2021-07-22-疫苗登記預約平台怎麼來的？.md
+++ b/_i18n/en/_posts/2021-07-22-疫苗登記預約平台怎麼來的？.md
@@ -11,16 +11,16 @@
     - "Service Design"
 ---
 
-Since the arrival of COVID-19 vaccines in March this year, the government has introduced a "vaccination leave" to encourage people to get vaccinated, and the premier and the commander have also taken the lead in getting vaccinated. With increased pandemic alert level since May, vaccination has instantly become a national topic. Drawing on the experience of eMask last year, the "vaccination appointment system" project was born accordingly.
+Since the import of the COVID-19 vaccine in March this year, the government has introduced a "vaccination leave" to encourage people to get vaccinated, and the premier and the commander have also taken the lead in getting vaccinated. With increased pandemic alert level since May, vaccination has instantly become a national topic. Drawing on the experience of eMask last year, the "1922 vaccination appointment system (VAS)" project was born accordingly.
 
-The introduction of the platform is a process of multiple revisions according to policies and requirements. The initial use scenario envisioned -- once there is an adequate supply across the country -- is to invite the public to make an appointment before vaccination, so that each dose of vaccine can be administered in the shortest time. However, due to international factors, the vaccine import schedule is often uncertain, which makes the effective use of existing doses even more important. Therefore, we added a step for people to "register" to ensure accurate distribution.
+The introduction of the 1922 VAS is a process of multiple revisions according to policies and requirements. The initial use scenario envisioned -- when there is an adequate supply across the country -- was to invite the public to make an appointment before vaccination, so that each dose of vaccine can be administered in the shortest time. However, due to international factors, the vaccine import schedule is often uncertain, which makes the precise use of existing doses even more important. Therefore, we introduced a step for people to "register" to ensure accurate distribution.
 
-In order to be considerate of people who are not familiar with the Internet, we have designed a channel for making appointments using national health insurance cards at convenience stores, pharmacies, and health centers. We have also coordinated with local civil service colleagues to provide support over the phone. During the design process, we found that front line colleagues at the health bureaus would like the platform to handle issues such as "vaccine distribution, inventory control, and site diversion". Furthermore, citizens have detailed expectations regarding the choices of appointment sites, such as "not restricting to the area of domicile" and "sorting by driving distance across districts".
+For people less familiar with the Internet, appointments may be made with health insurance cards at convenice stores, pharmacies, and health centers. We have also coordinated with local civil service to provide support over the phone. During the design process, we found that front line colleagues at local health bureaus would like the platform to handle issues such as "vaccine distribution, inventory control, and site diversion". Furthermore, citizens have detailed expectations regarding the choices of appointment sites, such as "not restricting to the area of domicile" and "sorting sites by driving distance across districts".
 
-At the same time, considering that over the years all regions have had a set of experience in issuing notices when it comes to influenza vaccination for the elderly, in order to avoid affecting the existing vaccination registration order, we finally decided to hold off "changing the track" to the new platform until the retired elderly over 65 years of age were all vaccinated, to reduce the burden on the front line epidemic prevention workers.
+Over the years, all regions have had experience in issuing notices when it comes to influenza vaccination for the elderly. In order to avoid affecting the existing vaccination registration order, we finally decided to hold off "changing the track" to the new platform until the retired elderly over 65 years of age were all vaccinated, to reduce the burden on the front line epidemic prevention workers.
 
-During this period of preparation to launch, it is fair to say that the needs of all parties were constantly evolving, ranging from appointment processing fees to lowering the age range. Fortunately, the core question of <b>"how might we increase the vaccination rate?"</b> served as a calibration line to help reconcile various opinions so that the platform would not deviate from its original intention.
+During this period before launch, it is fair to say that the needs of all parties were rapidly evolving, ranging from appointment processing fees to lowering the age range. Fortunately, there was the core question of <b>"how to increase the vaccination rate?"</b> being a calibration line to help reconcile various opinions so that the platform would not deviate from its original intention.
 
 After comprehensive discussions with the mayors and colleagues from all local governments, we held four joint video conferences to incorporate the practical needs of local governments for registration, distribution, appointment, and vaccine administration into the system functions. Five sessions were also held for the education and training of the front line staff, so that everyone overcame the barrier of learning together. Thanks to the concerted efforts of everyone, the platform was finally launched in early July. So far, nearly 10 million people have registered.
 
-Civil servants value "public opinion," and an open government appreciates "people's power." We are trying our best to improve the user interface and process problems reported by the people in a timely manner to improve the efficiency of the platform. Therefore, do not think that your own opinions are inconsequential and cannot change the status quo. The courage to ask questions is the beginning of change. Finally, don't forget to "register your willingness and get vaccinated when it's your turn". You are indispensable in the pandemic defense line.
+Civil servants value "public opinion," and an open government appreciates "people's power." We are trying our best to improve the user interface and process problems reported by the people in a timely manner to improve the efficiency of the platform. Therefore, do not think that your own opinions are inconsequential and cannot change the status quo. The courage to ask questions is the beginning of change. Finally, don't forget to "register your willingness & get vaccinated when it's your turn". You are indispensable in the pandemic defense line.
