--- a/_i18n/en/_posts/2021-07-18- 1922 疫苗預約系統.md
+++ b/_i18n/en/_posts/2021-07-18- 1922 疫苗預約系統.md
@@ -3,7 +3,7 @@
   title: "1922 Vaccine Appointment System"
   excerpt: "There are four steps in the 1922 VAS: Registration, Notification, Appointment, and Vaccination."
   image: "/assets/imgs/2f459131f60844dab4133346dea8d7336e6e55aa.jpg"
-  author: "Audrey Tang、Sheau-Tyng Peng"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
     - "Social Innovation"
