--- a/_i18n/en/_posts/2021-07-22-疫苗登記預約平台怎麼來的？.md
+++ b/_i18n/en/_posts/2021-07-22-疫苗登記預約平台怎麼來的？.md
@@ -17,7 +17,7 @@ The introduction of the 1922 VAS is a process of multiple revisions according to
 
 For people less familiar with the Internet, appointments may be made with health insurance cards at convenice stores, pharmacies, and health centers. We have also coordinated with local civil service to provide support over the phone. During the design process, we found that front line colleagues at local health bureaus would like the platform to handle issues such as "vaccine distribution, inventory control, and site diversion". Furthermore, citizens have detailed expectations regarding the choices of appointment sites, such as "not restricting to the area of domicile" and "sorting sites by driving distance across districts".
 
-Over the years, all regions have had experience in issuing notices when it comes to influenza vaccination for the elderly. In order to avoid affecting the existing vaccination registration order, we finally decided to hold off "changing the track" to the new platform until the retired elderly over 65 years of age were all vaccinated, to reduce the burden on the front line epidemic prevention workers.
+Over the years, all local governments have had experience in issuing notices when it comes to influenza vaccination for the elderly. In order to avoid affecting the existing vaccination process, we finally decided to hold off "changing the track" to the new platform until the retired elderly over 65 years of age were all vaccinated, to reduce the burden on the front line epidemic prevention workers.
 
 During this period before launch, it is fair to say that the needs of all parties were rapidly evolving, ranging from appointment processing fees to lowering the age range. Fortunately, there was the core question of <b>"how to increase the vaccination rate?"</b> being a calibration line to help reconcile various opinions so that the platform would not deviate from its original intention.
 
