--- a/_i18n/en/_posts/2021-08-05-「韌性島嶼」讓總統盃黑客松受到更多期待.md
+++ b/_i18n/en/_posts/2021-08-05-「韌性島嶼」讓總統盃黑客松受到更多期待.md
@@ -1,24 +1,25 @@
 ---
   layout: "post"
-  title: "\"Island of Resilience\" Makes the President's Cup Hackathon more anticipated"
-  excerpt: "\"Resilience\" is more important than the \"efficiency\" that everyone emphasized in the past."
+  title: "“Resilient Islands” Makes the Presidential Hackathon more anticipated"
+  excerpt: "“Resilience” is more important than “efficiency”, which is what we used to pursue."
   image: "/assets/imgs/80df08d33b0047efb989a3a58134506f.jpg"
-  author: "唐鳳、彭美琪"
+  author: "Audrey Tang, Mickey Peng"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "社會創新"
+    - "Open Government"
+    - "Social Innovation"
 ---
 
+The epidemic that has continued to spread over the past year has made the world realize that ensuring "resilience" in response to various economic, social, and environmental systemic risks is more important than "efficiency", which is what we used to pursue.
 
-The epidemic that has continued to spread over the past year has made the world realize that ensuring "resilience" in response to various economic, social, and environmental systemic risks is more important than the "efficiency" that everyone has demanded in the past. The annual [Presidential Hackathon](https://presidential-hackathon.taiwan.gov.tw/), with the theme of "Sustainability 2.0. Resilience Island", invites citizens to participate in the 7 major areas of the country's sustainable development , Put forward the demand. 
+The annual [Presidential Hackathon](https://presidential-hackathon.taiwan.gov.tw/), with the theme of "Sustainability 2.0: Resilience Islands", invites citizens to participate in the 7 major areas of the country's sustainable development, put forward the demand. 
 
-This year received as many as 153 wishes, an increase of 21 from last year, showing that citizens have more expectations for the "resilience island" than in previous years. 
+This year received as many as 153 wishes, an increase of 21 from last year, showing that citizens have more expectations for the "resilient islands" than in previous years. 
 
-Not only has the number increased, but the analysis and insights put forward by the expert committees this year have also made wishing more feasible. For example, we all know that "strengthening the social and economic security care services for vulnerable groups (SDG01)" is very important, and there are also "reducing vulnerable disaster issues" in the wishing pool. Therefore, the committee members proposed "recommendations from the perspective of climate victims (large scale). The disadvantaged group (small scale) is only one type of relationship.” Point out the core issues, so that the follow-up team proposal and problem-solving process can be more concentrated. 
+Not only has the number increased, but the analysis and insights put forward by the expert committees this year have also made wishing more feasible. For example, we all know that "strengthening the social and economic security care services for vulnerable groups (SDG01)" is very important, and there are also "reducing vulnerable disaster issues" in the wishing pool. Therefore, the committee members proposed "recommendations from the perspective of climate victims (large scale). The disadvantaged group (small scale) is only one type of relationship." Point out the core issues, so that the follow-up team proposal and problem-solving process can be more concentrated. 
 
-After all, the characteristics of the President’s Cup hackathon are precisely in the months-long "problem-solving process": through the suggestions of expert committees, the direction of the proposal is clearer, the content is more feasible, and the benefits are more clear. Really valuable solution. In other words, through cross-domain integration and participation, to produce useful results that meet social needs, and also enable the team to better condense cross-departmental, cross-central and local common values. 
+After all, the characteristics of the Presidential Hackathon are precisely in the months-long "problem-solving process": through the suggestions of expert committees, the direction of the proposal is clearer, the content is more feasible, and the benefits are more clear. Really valuable solution. In other words, through cross-domain integration and participation, to produce useful results that meet social needs, and also enable the team to better condense cross-departmental, cross-central and local common values. 
 
-Excellent teams over the years often mentioned in sharing: winning is certainly an exciting spiritual encouragement, but for citizen hackers, the value of the President’s Cup trophy lies in seeing their own proposals, and finally Opportunity to be implemented. It is the greatest wish to truly improve society, solve problems, and benefit the people. 
+Excellent teams over the years often mentioned in sharing: winning is certainly an exciting spiritual encouragement, but for civi hackers, the value of the Presidential Hackathon trophy lies in seeing their own proposals, and finally Opportunity to be implemented. It is the greatest wish to truly improve society, solve problems, and benefit the people. 
 
-The wishing activity has been successfully completed, and now is the time for citizen hackers to start. A total of 164 team proposals were made this year, which offered solutions to issues such as circular economy, resilient urban and rural areas, and cross-domain integration. As for which teams can enter the re-election? Your vote is indispensable. From now until 10 pm on August 6 (Friday), invite all people to vote on the Internet (https://presidential-hackathon.taiwan.gov.tw/ProposalPoll.aspx), and choose your heart through "square voting" The best proposal to make your support an important driving force for policy innovation. 
+The wishing activity has been successfully completed, and now is the time for civic hackers to start. A total of 164 team proposals were made this year, which offered solutions to issues such as circular economy, resilient urban and rural areas, and cross-domain integration. As for which teams can enter the re-election? Your vote is indispensable. From now until 10 pm on August 6 (Friday), invite all people to [vote online](https://presidential-hackathon.taiwan.gov.tw/ProposalPoll.aspx), and choose your heart through "quadratic voting" The best proposal to make your support an important driving force for policy innovation. 
