--- a/_i18n/en/_posts/2021-06-24-遠距兩分情.md
+++ b/_i18n/en/_posts/2021-06-24-遠距兩分情.md
@@ -3,11 +3,11 @@
   title: "Long-distance dichotomy"
   excerpt: "As the saying goes, \"Meet the three-parties.\" The experience of being present together is certainly important, but I think that in an environment with a high enough resolution and a complete record of the process, it is also possible to achieve \"distant love\""
   image: "/assets/imgs/b4d39926d9c3e5cf51fb273e0aa0b43802d27e3f.jpeg"
-  author: "唐鳳、張皓婷"
+  author: "Audrey Tang, Hao-Ting Chang"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "社會創新"
+    - "Open Government"
+    - "Social Innovation"
 ---
 
 
