--- a/_i18n/en/_posts/2021-08-19-「選每一邊站」.md
+++ b/_i18n/en/_posts/2021-08-19-「選每一邊站」.md
@@ -1,14 +1,13 @@
 ---
   layout: "post"
-  title: "\"Choose each side station\""
+  title: "\"Taking all the sides\""
   excerpt: "What's interesting is that there is often a fine line between getting closer and angering each other."
   image: "/assets/imgs/artistic-2063_1920.jpg"
-  author: "唐鳳、張皓婷"
+  author: "Audrey Tang, Haoting Chang"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
-
 
 Public policy involves everyone, with different experiences and positions. In order to achieve communication from "speaking" to "dialogue", it is necessary to understand the ideas of all parties before they can try to promote discussion. Therefore, when our office conducts open government training courses, we often practice a mini game for civil servants: "annoying each other in one second" and "close the distance in one second." 
 
